--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,7 +3,7 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading attribution">&#169;&nbsp;2018 {{ site.author | escape }} under the terms of <a href="">MIT&nbsp;License</h2>
+    <h2 class="footer-heading attribution">&#169;&nbsp;2018 {{ site.author | escape }} under the terms of <a href="https://cnogola.github.io/LICENSE">MIT&nbsp;License</h2>
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
