--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,10 +9,10 @@
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
-            {%- if site.author -%}
-              {{ site.author | escape }}
-            {%- else -%}
+            {%- if site.title -%}
               {{ site.title | escape }}
+            {%- else -%}
+              {{ site.author | escape }}
             {%- endif -%}
             </li>
             {%- if site.email -%}
