--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,5 +1,5 @@
 ---
-
+# Only the main Sass file needs front matter (the dashes are enough)
 ---
 
 @import "minima";
@@ -8,3 +8,10 @@
     font-size: 15px;
 }
 
+.footer-col-1 {
+    width: calc(30% - (30px / 2));
+}
+
+.footer-col-2 {
+    width: calc(25% - (30px / 2));
+}
