--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,3 @@
----
-# Only the main Sass file needs front matter (the dashes are enough)
----
 
 @import "minima";
 
@@ -14,4 +11,9 @@
 
 .footer-col-2 {
     width: calc(25% - (30px / 2));
+}
+
+.cv, #period {
+	font-size: 30px;
+    font-style: italic;
 }
